2013-05-25  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/logic.spad.pamphlet: New file.
	* algebra/boolean.spad.pamphlet (Logic): Move there.
	(BooleanLogic): Likewise.
	(PropositionalLogic): Likewise.
	(PropositionalFormula): Likewise.
	(PropositionalFormulaFunctions1): Likewise.
	(PropositionalFormulaFunctions2): Likewise.
	(KleeneTrivalentLogic): Likewise.

2013-05-25  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/cycles.spad.pamphlet (CycleIndicators) [spol]: Rename
	from nniBump.  Fix thinko.

2013-05-25  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/cycles.spad.pamphlet (alternating): Accept non-negative input.

2013-05-25  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* utils/command.cc (print_usage): Document --verbose.

2013-05-25  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/indexedp.spad.pamphlet (IndexedDirectProductObject):
	Define Rep, do not use base-domain form.

2013-05-23  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/stream.spad.pamphlet (LazyStreamAggregate) [entries]:
	Define unconditionally, even it it does not make much sense in general.

2013-05-22  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/sys-utility.boot (%Libstream): New.

2013-05-21  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/aggcat.spad.pamphlet (ShallowlyMutableAggregate): Extend
	Aggregate only.  Adjust users.
	(BagAggregate): Explicitly extend HomogeneousAggregate.
	(AssociationListAggregate): Extend ShallowlyMutableAggregate.

2013-05-21  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/aggcat.spad.pamphlet (UnaryRecursiveAggregate) [map!]:
	Implement default.
	* algebra/list.spad.pamphlet (List) [map!]: Likewise.

2013-05-20  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/database.boot (getConstructorAbbreviationFromDB): Use DB
	data structure directtly.
	(getConstructorKindFromDB): Likewise.
